--- a/lang/pom.xml
+++ b/lang/pom.xml
@@ -21,13 +21,13 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.jadira.framework</groupId>
+		<groupId>com.github.arteam</groupId>
 		<artifactId>jadira.parent</artifactId>
 		<version>6.0.2.GA-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<groupId>org.jadira.lang</groupId>
+	<groupId>com.github.arteam</groupId>
 	<artifactId>lang</artifactId>
 	<packaging>jar</packaging>
 
@@ -37,7 +37,7 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>org.jadira.framework</groupId>
+				<groupId>com.github.arteam</groupId>
 				<artifactId>jadira.depmgmt</artifactId>
 				<type>pom</type>
 				<scope>import</scope>
